--- a/LoginForm/nbproject/private/private.properties
+++ b/LoginForm/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\biniyamk\\Downloads\\jar_files\\mysql-connector-java-5.1.47.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\biniyamk\\AppData\\Roaming\\NetBeans\\16\\build.properties
